--- a/index.html
+++ b/index.html
@@ -13,9 +13,22 @@
 
     <nav class="navbar navbar-dark bg-primary mb-3">
         <div class="container">
-            <a href="" class="navbar"></a>
+            <a href="" class="navbar-brand">GitHub Finder</a>
         </div>
     </nav>
+    <div class="container searchContainer">
+        <div class="search card card-body">
+            <h1>Sqarch GitHub Users</h1>
+            <p class="lead">Enter a username to fetch a user profile and repos</p>
+            <input type="text" id="searchUser" class="form-control" placeholder="GitHub Username ..." text="">
+        </div>
+        <br>
+        <div id="profile"></div>
+    </div>
+
+    <footer class="mt-5 p-3 text-center bg-light">
+        GitGub Finder &copy;
+    </footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
